--- a/index.html
+++ b/index.html
@@ -25,57 +25,59 @@
         </nav>
     </header>
 
-<main>
-    <div class="hero"></div>
-    <div class="content">
-        <div class="search-engine-optimization">
-            <img src="./assets/images/search-engine-optimization.jpg" class="float-left" />
+    <div class="top-image">
+        <img src="./assets/images/digital-marketing-meeting.jpg" alt="meeting of digital marketers at a table" class="float-right" />
+    </div>
+
+    <section class="content">
+        <article id="search-engine-optimization" class="summary">
+            <img src="./assets/images/search-engine-optimization.jpg" alt="top down perspective of a wooden table covered with a coffee cup, laptop, magnifying glass, pens, and a notebook showing notes and doodles about SEO" class="float-left" />
             <h2>Search Engine Optimization</h2>
             <p>
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
             </p>
-        </div>
-        <div id="online-reputation-management" class="online-reputation-management">
-            <img src="./assets/images/online-reputation-management.jpg" class="float-right" />
+        </article>
+        <article id="online-reputation-management" alt="first person perspective of individual holding smart phone while at a desk looking at a laptop showing a graph about reputation" class="summary" />
+        <img src="./assets/images/online-reputation-management.jpg" class="float-right" />
             <h2>Online Reputation Management</h2>
             <p>
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
             </p>
-        </div>
-        <div id="social-media-marketing" class="social-media-marketing">
-            <img src="./assets/images/social-media-marketing.jpg" class="float-left" />
+        </article>
+        <article id="social-media-marketing" class="summary">
+            <img src="./assets/images/social-media-marketing.jpg" alt="top down perspective of multiple people gathered at a table with laptops and tables, combined with icon graphics about social media" class="float-left" />
             <h2>Social Media Marketing</h2>
             <p>
                 Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
             </p>
-        </div>
-    </div>
+        </article>
+    </section>
 
-    <aside>
-    <div class="benefits">
-        <div class="benefit-lead">
+    <aside class="benefits">
+        <article class="single-benefit">
             <h3>Lead Generation</h3>
-            <img src="./assets/images/lead-generation.png" />
+            <img src="./assets/images/lead-generation.png" alt="Gear being transformed into a dollar sign"/>
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
-        </div>
-        <div class="benefit-brand">
+        </article>
+        <article class="single-benefit">
             <h3>Brand Awareness</h3>
-            <img src="./assets/images/brand-awareness.png" />
+            <img src="./assets/images/brand-awareness.png" alt="lightbulb projecting signals made to look like a head and shoulders in a suit"/>
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
-        </div>
-        <div class="benefit-cost">
+        </article>
+        <article class="single-benefit">
             <h3>Cost Management</h3>
-            <img src="./assets/images/cost-management.png" />
+            <img src="./assets/images/cost-management.png" alt="Three dollar signs overlaying a large gear"></img>
             <p>
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
             </p>
-        </aside>
+        </article>
+    </aside>
     </main>
-    
+
     <footer>
         <h2>Made with ❤️️ by Horiseon</h2>
         <p>
