--- a/index.html
+++ b/index.html
@@ -8,9 +8,11 @@
 </head>
 
 <body>
+    <!-- Header -->
     <header>
         <h1>Hori<span>seo</span>n</h1>
         <nav>
+    <!-- Navigation -->
             <ul>
                 <li>
                     <a href="#search-engine-optimization">Search Engine Optimization</a>
@@ -25,10 +27,15 @@
         </nav>
     </header>
 
+    <!-- Main Content -->
+<main>
+
+<!-- Top Large Image -->
     <div class="top-image">
         <img src="./assets/images/digital-marketing-meeting.jpg" alt="meeting of digital marketers at a table" class="float-right" />
     </div>
 
+    <!-- Primary Content on Left -->
     <section class="content">
         <article id="search-engine-optimization" class="summary">
             <img src="./assets/images/search-engine-optimization.jpg" alt="top down perspective of a wooden table covered with a coffee cup, laptop, magnifying glass, pens, and a notebook showing notes and doodles about SEO" class="float-left" />
@@ -53,6 +60,7 @@
         </article>
     </section>
 
+    <!-- Aside Benefits Content on Right -->
     <aside class="benefits">
         <article class="single-benefit">
             <h3>Lead Generation</h3>
@@ -78,6 +86,7 @@
     </aside>
     </main>
 
+    <!-- Footer -->
     <footer>
         <h2>Made with ❤️️ by Horiseon</h2>
         <p>
