--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
 <main>
 
 <!-- Top Large Image -->
-    <div class="top-image">
+    <figure>
         <img src="./assets/images/digital-marketing-meeting.jpg" alt="meeting of digital marketers at a table" class="float-right" />
-    </div>
+    </figure>
 
     <!-- Primary Content on Left -->
     <section class="content">
